--- a/aw1/index.html
+++ b/aw1/index.html
@@ -89,14 +89,17 @@
 
       <div class="divider-1"></div>
 
-      <!--HISTÓRIA-->
+      <!-- HISTORIA -->
+
       <section class="section" id="historia">
         <div class="container">
-          <h2 class="title">História</h2>
-            <div class="testimonials swiper-container">
-              <div class="swiper-wrapper">
-                <div class="conteudo1 swiper-slide">
-                  <img src="assets/historia_1.png" alt="" />
+          <header>
+            <h2 class="title">História</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="conteudo1 swiper-slide">
+                <img src="assets/historia_1.png" alt="" />
                     <p>
                       O TaeKwonDo é uma arte marcial milenar, com indícios de surgimento
                       há mais de 2 mil anos, numa época em que a Coréia (berço dessa
@@ -113,28 +116,29 @@
                       TAE-KYON (técninca de chutes) e acabou se unificando península da
                       Coréia pela primeira vez em 669 a.C, tornando-se conhecida por
                       toda nação, espalhando a sua prática para todos.
-                    </p>
-                </div>
-                <div class="conteudo2 swiper-slide">
-                    <img src="assets/historia_2.png" alt="" />
-                    <p>
-                      Porém, muitos anos depois, em 1909, a Coréia é invadida pelo
-                      Japão. Com o controle do país nas maõs do imperialismo japonês,
-                      suprimem-se todas as modalidades culturais locais, inclusive o
-                      TAE-KYON. Mas, a prática continuava sendo executada
-                      clandestinamente por mestres passada de pai para filho em casa.
-                      <br />
-                      Com o fim da Segunda Guerra Mundial, em 1945, o Japão perde
-                      prestígio e todas as suas colonias, entre elas a Coréia. Isso
-                      acabou gerando uma grande bagunça, pois diversos mestres dos dois
-                      países afirmavam ensinar a antiga arte do TAE-KYON e com o passar
-                      de todos aqueles anos, diversas escolas e estilos haviam surgido,
-                      também confirmando ensinar a verdadeira arte: Soo Bak Do, Kwon
-                      Bop, Kong Soo Do, Tae Soo Do e Dang Soo Do.
-                    </p>
-                </div>
-                <div class="conteudo1 swiper-slide">
-                  <img src="assets/historia_3.png" alt="" />
+              </div>
+
+              <div class="conteudo2 swiper-slide">
+                <img src="assets/historia_2.png" alt="" />
+                <p>
+                  Porém, muitos anos depois, em 1909, a Coréia é invadida pelo
+                  Japão. Com o controle do país nas maõs do imperialismo japonês,
+                  suprimem-se todas as modalidades culturais locais, inclusive o
+                  TAE-KYON. Mas, a prática continuava sendo executada
+                  clandestinamente por mestres passada de pai para filho em casa.
+                  <br />
+                  Com o fim da Segunda Guerra Mundial, em 1945, o Japão perde
+                  prestígio e todas as suas colonias, entre elas a Coréia. Isso
+                  acabou gerando uma grande bagunça, pois diversos mestres dos dois
+                  países afirmavam ensinar a antiga arte do TAE-KYON e com o passar
+                  de todos aqueles anos, diversas escolas e estilos haviam surgido,
+                  também confirmando ensinar a verdadeira arte: Soo Bak Do, Kwon
+                  Bop, Kong Soo Do, Tae Soo Do e Dang Soo Do.
+                </p>
+              </div>
+
+              <div class="conteudo1 swiper-slide">
+                <img src="assets/historia_3.png" alt="" />
                   <p>
                     Após isso, em 1955, houve um congresso reunindo os mestres de cada
                     escola e foi decidida a união dos estilos, adotando somente o nome
@@ -156,10 +160,13 @@
                     olimpíadas de Sidney, Austrália, que o TaeKwonDo se tornou oficial
                     e definitivo nos Jogos Olímpicos.
                   </p>
-                </div>
               </div>
-              <div class="swiper-pagination"></div>  
             </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+
         </div>
       </section>
 
