--- a/pb3/index.html
+++ b/pb3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
     <title>SuperTrunfo - B99</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
             <div id="carta-jogador">
               <img
                 src="https://www.alura.com.br/assets/img/imersoes/dev-2021/card-super-trunfo-transparent-ajustado.png"
-                style="width: inherit; height: inherit; position: absolute"
+                style="width: inherit"
               />
               <h3></h3>
             </div>
@@ -31,7 +31,7 @@
             <div id="carta-maquina" class="carta">
               <img
                 src="https://www.alura.com.br/assets/img/imersoes/dev-2021/card-super-trunfo-transparent-ajustado.png"
-                style="width: inherit; height: inherit; position: absolute"
+                style="width: inherit"
               />
             </div>
           </div>
@@ -46,6 +46,7 @@
           Jogar
         </button>
         <div id="resultado"></div>
+        <button class="button-jogar" id="refresh">Jogar Novamente</button>
       </form>
     </div>
   </body>
